# AABM

./: Circle_waypoints.m  README.md  checklist.txt  circle_waypoints_1_5.csv  circle_waypoints_2_0.csv  circle_waypoints_generation.m  rosbag_plot_aabm.m  single_traj_circle_new.py  topic_checker.py  topic_monitor.py  trajectory_circle.py  trajectory_utility.py
aabm_comms/: CMakeLists.txt  package.xml
aabm_comms/msg/: AutopilotStatus.msg  HL_command.msg  Path.msg  PoseTest.msg  Trajectory.msg  Trajectory_sngl.msg  Waypoint.msg
matlab_scripts_aabm/: rosbag_plot_aabm.m
scripts/: run.sh
